# ED-Subs-Project

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
conf/: config.yaml
docs/: architecture.md  bronze_layer.md  data_dictionary.md  handoff.md  key_definitions.md
jobs/: README.md
notebooks/: README.md
notebooks/00_ingestion/: load_bronze.py
notebooks/02_silver/: build_silver.py
notebooks/04_eda/: 00_sanity_check.ipynb  01_cohort_overview.py  02_subscription_lifecycle_and_fellout.py  03_cancellation_feature_eda.py  03_cancellation_type_eda.py  03_cancellation_types_eda.py  03_churn_types_eda.py  04_baseline_feature_eda.py  04_cancellation_feature_eda.py  04_first 30_day_feature_eda.py  05_temporal_feature_eda.py  cohort_label_sanity_check.py  deferral_analysis.py  eda_results_bindu.md
sql/redshift/exports/: README.md
sql/redshift/exports/goodrx_dbt/: int_subs_kafka__events_06242026.sql  int_subs_kafka__events_06302026.sql  int_subs_kafka__events_07012026.sql  int_subs_kafka__events_07022026.sql  int_subs_kafka__events_07052026.sql  int_subs_kafka__events_07092026.sql  subscription_charges.sql  subscription_charges_06242026.sql  subscription_charges_06302026.sql  subscription_invoices.sql  (+25 more)
src/ed_subs/: __init__.py  config.py
src/ed_subs/eda/: __init__.py
src/ed_subs/features/: __init__.py  churn_label.py
src/ed_subs/ingestion/: __init__.py  csv_to_bronze.py
src/ed_subs/models/: __init__.py  churn.py
src/ed_subs/transform/: __init__.py  gold.py  silver.py
src/ed_subs/utils/: __init__.py  spark.py
tests/: test_config.py
